// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ColorField /> should render 1`] = `
<div>
  <div
    class="junipero dropdown opened color-field pristine valid"
  >
    <div
      class="inner dropdown-toggle opened"
      id="dropdown-toggle"
    >
      <div
        class="junipero text-field pristine valid empty"
      >
        <input
          class="field"
          type="text"
          value=""
        />
      </div>
      <a
        class="pigment"
      />
    </div>
    <div
      aria-labelledby="dropdown-toggle"
      class="junipero dropdown-menu color-menu"
      data-floating-ui-focusable=""
      role="listbox"
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="color-wheel"
        >
          <div
            class="lightness"
            style="background-color: rgb(255, 0, 0);"
          >
            <a
              class="handle"
              style="transform: translate3d(0px, 0px, 0);"
            />
          </div>
          <div
            class="controls"
          >
            <div
              class="sliders"
            >
              <div
                class="hue"
              >
                <a
                  class="handle"
                  style="transform: translate3d(0px, 0, 0);"
                />
              </div>
              <div
                class="alpha"
                style="background-color: rgb(255, 0, 0);"
              >
                <a
                  class="handle"
                  style="transform: translate3d(0px, 0, 0);"
                />
              </div>
            </div>
            <div
              class="color-preview"
            >
              <div
                class="preview-inner"
                style="background-color: rgb(255, 255, 255);"
              />
            </div>
          </div>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<ColorField /> should update values when mouse is down and alpha handle is selected: alpha handle moving 1`] = `
<div>
  <div
    class="junipero dropdown opened color-field dirty valid empty moving"
  >
    <div
      class="inner dropdown-toggle opened"
      id="dropdown-toggle"
    >
      <div
        class="junipero text-field dirty valid"
      >
        <input
          class="field"
          type="text"
          value="#ffffff"
        />
      </div>
      <a
        class="pigment"
        style="background-color: rgb(255, 255, 255);"
      />
    </div>
    <div
      aria-labelledby="dropdown-toggle"
      class="junipero dropdown-menu color-menu"
      data-floating-ui-focusable=""
      role="listbox"
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="color-wheel"
        >
          <div
            class="lightness"
            style="background-color: rgb(255, 0, 0);"
          >
            <a
              class="handle"
              style="transform: translate3d(0px, 0px, 0);"
            />
          </div>
          <div
            class="controls"
          >
            <div
              class="sliders"
            >
              <div
                class="hue"
              >
                <a
                  class="handle"
                  style="transform: translate3d(0px, 0, 0);"
                />
              </div>
              <div
                class="alpha"
                style="background-color: rgb(255, 0, 0);"
              >
                <a
                  class="handle"
                  style="transform: translate3d(NaNpx, 0, 0);"
                />
              </div>
            </div>
            <div
              class="color-preview"
            >
              <div
                class="preview-inner"
                style="background-color: rgb(255, 255, 255);"
              />
            </div>
          </div>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<ColorField /> should update values when mouse is down and alpha handle is selected: color selected 1`] = `
<div>
  <div
    class="junipero dropdown opened color-field dirty valid empty moving"
  >
    <div
      class="inner dropdown-toggle opened"
      id="dropdown-toggle"
    >
      <div
        class="junipero text-field dirty valid"
      >
        <input
          class="field"
          type="text"
          value="rgba(255, 255, 255, 0.5)"
        />
      </div>
      <a
        class="pigment"
        style="background-color: rgba(255, 255, 255, 0.5);"
      />
    </div>
    <div
      aria-labelledby="dropdown-toggle"
      class="junipero dropdown-menu color-menu"
      data-floating-ui-focusable=""
      role="listbox"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="0"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="color-wheel"
        >
          <div
            class="lightness"
            style="background-color: rgb(255, 0, 0);"
          >
            <a
              class="handle"
              style="transform: translate3d(0px, 0px, 0);"
            />
          </div>
          <div
            class="controls"
          >
            <div
              class="sliders"
            >
              <div
                class="hue"
              >
                <a
                  class="handle"
                  style="transform: translate3d(0px, 0, 0);"
                />
              </div>
              <div
                class="alpha"
                style="background-color: rgb(255, 0, 0);"
              >
                <a
                  class="handle"
                  style="transform: translate3d(50px, 0, 0);"
                />
              </div>
            </div>
            <div
              class="color-preview"
            >
              <div
                class="preview-inner"
                style="background-color: rgba(255, 255, 255, 0.5);"
              />
            </div>
          </div>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<ColorField /> should update values when mouse is down and hue handle is selected: color selected 1`] = `
<div>
  <div
    class="junipero dropdown opened color-field dirty valid empty moving"
  >
    <div
      class="inner dropdown-toggle opened"
      id="dropdown-toggle"
    >
      <div
        class="junipero text-field dirty valid"
      >
        <input
          class="field"
          type="text"
          value="#ffffff"
        />
      </div>
      <a
        class="pigment"
        style="background-color: rgb(255, 255, 255);"
      />
    </div>
    <div
      aria-labelledby="dropdown-toggle"
      class="junipero dropdown-menu color-menu"
      data-floating-ui-focusable=""
      role="listbox"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="0"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="color-wheel"
        >
          <div
            class="lightness"
            style="background-color: rgb(0, 255, 255);"
          >
            <a
              class="handle"
              style="transform: translate3d(0px, 0px, 0);"
            />
          </div>
          <div
            class="controls"
          >
            <div
              class="sliders"
            >
              <div
                class="hue"
              >
                <a
                  class="handle"
                  style="transform: translate3d(50px, 0, 0);"
                />
              </div>
              <div
                class="alpha"
                style="background-color: rgb(0, 255, 255);"
              >
                <a
                  class="handle"
                  style="transform: translate3d(0px, 0, 0);"
                />
              </div>
            </div>
            <div
              class="color-preview"
            >
              <div
                class="preview-inner"
                style="background-color: rgb(255, 255, 255);"
              />
            </div>
          </div>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<ColorField /> should update values when mouse is down and hue handle is selected: hue handle moving 1`] = `
<div>
  <div
    class="junipero dropdown opened color-field dirty valid empty moving"
  >
    <div
      class="inner dropdown-toggle opened"
      id="dropdown-toggle"
    >
      <div
        class="junipero text-field dirty valid"
      >
        <input
          class="field"
          type="text"
          value="#000000"
        />
      </div>
      <a
        class="pigment"
        style="background-color: rgb(0, 0, 0);"
      />
    </div>
    <div
      aria-labelledby="dropdown-toggle"
      class="junipero dropdown-menu color-menu"
      data-floating-ui-focusable=""
      role="listbox"
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="color-wheel"
        >
          <div
            class="lightness"
            style="background-color: rgb(0, 0, 0);"
          >
            <a
              class="handle"
              style="transform: translate3d(0px, 0px, 0);"
            />
          </div>
          <div
            class="controls"
          >
            <div
              class="sliders"
            >
              <div
                class="hue"
              >
                <a
                  class="handle"
                  style="transform: translate3d(NaNpx, 0, 0);"
                />
              </div>
              <div
                class="alpha"
                style="background-color: rgb(0, 0, 0);"
              >
                <a
                  class="handle"
                  style="transform: translate3d(0px, 0, 0);"
                />
              </div>
            </div>
            <div
              class="color-preview"
            >
              <div
                class="preview-inner"
                style="background-color: rgb(0, 0, 0);"
              />
            </div>
          </div>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<ColorField /> should update values when mouse is down and lightness handle is selected: color selected 1`] = `
<div>
  <div
    class="junipero dropdown opened color-field dirty valid empty moving"
  >
    <div
      class="inner dropdown-toggle opened"
      id="dropdown-toggle"
    >
      <div
        class="junipero text-field dirty valid"
      >
        <input
          class="field"
          type="text"
          value="#804040"
        />
      </div>
      <a
        class="pigment"
        style="background-color: rgb(128, 64, 64);"
      />
    </div>
    <div
      aria-labelledby="dropdown-toggle"
      class="junipero dropdown-menu color-menu"
      data-floating-ui-focusable=""
      role="listbox"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="0"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="color-wheel"
        >
          <div
            class="lightness"
            style="background-color: rgb(255, 0, 0);"
          >
            <a
              class="handle"
              style="transform: translate3d(50px, 50px, 0);"
            />
          </div>
          <div
            class="controls"
          >
            <div
              class="sliders"
            >
              <div
                class="hue"
              >
                <a
                  class="handle"
                  style="transform: translate3d(0px, 0, 0);"
                />
              </div>
              <div
                class="alpha"
                style="background-color: rgb(255, 0, 0);"
              >
                <a
                  class="handle"
                  style="transform: translate3d(0px, 0, 0);"
                />
              </div>
            </div>
            <div
              class="color-preview"
            >
              <div
                class="preview-inner"
                style="background-color: rgb(128, 64, 64);"
              />
            </div>
          </div>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<ColorField /> should update values when mouse is down and lightness handle is selected: lightness handle moving 1`] = `
<div>
  <div
    class="junipero dropdown opened color-field dirty valid empty moving"
  >
    <div
      class="inner dropdown-toggle opened"
      id="dropdown-toggle"
    >
      <div
        class="junipero text-field dirty valid"
      >
        <input
          class="field"
          type="text"
          value="#000000"
        />
      </div>
      <a
        class="pigment"
        style="background-color: rgb(0, 0, 0);"
      />
    </div>
    <div
      aria-labelledby="dropdown-toggle"
      class="junipero dropdown-menu color-menu"
      data-floating-ui-focusable=""
      role="listbox"
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="color-wheel"
        >
          <div
            class="lightness"
            style="background-color: rgb(255, 0, 0);"
          >
            <a
              class="handle"
              style="transform: translate3d(NaNpx, NaNpx, 0);"
            />
          </div>
          <div
            class="controls"
          >
            <div
              class="sliders"
            >
              <div
                class="hue"
              >
                <a
                  class="handle"
                  style="transform: translate3d(0px, 0, 0);"
                />
              </div>
              <div
                class="alpha"
                style="background-color: rgb(255, 0, 0);"
              >
                <a
                  class="handle"
                  style="transform: translate3d(0px, 0, 0);"
                />
              </div>
            </div>
            <div
              class="color-preview"
            >
              <div
                class="preview-inner"
                style="background-color: rgb(0, 0, 0);"
              />
            </div>
          </div>
        </div>
      </ul>
    </div>
  </div>
</div>
`;
